[package]
name = "automotive-commodo"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.6"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
stm32l1xx-hal = { version = "0.1.0", default-features = false, features = ["stm32l152", "rt"] }
uart = "0.1.2"
rtt-target = { version = "0.5" }
